fixed gtest module includes based on this gist: https://gist.github.com/njligames/09160cb77b639dbcf6bb071060a3c35b

--- a/tests/testSampleLib2/CMakeLists.txt
+++ b/tests/testSampleLib2/CMakeLists.txt
@@ -5,8 +5,8 @@ ADD_EXECUTABLE(testSampleLib2 ${SRCS})
 TARGET_LINK_LIBRARIES(
     testSampleLib2
     SAMPLE_LIB_2
-    libgtest
-    libgmock
+    ${GTEST_LIBRARY}
+    ${GMOCK_LIBRARY}
 )
 
 add_test(NAME testSampleLib2
